--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 <body style="background-image: url(images/backimage.jpg);">
 	<div id="fh5co-main">
 		<div class="fh5co-tab-wrap">
+			<!-- メニューバー -->
 			<ul class="fh5co-tab-menu">
 				<li class="active"><a href="#" data-tab="1"><span class="icon icon-user"></span><span class="menu-text">Profile</span></a></li>
 				<li><a href="#" data-tab="2"><span class="icon icon-graduation-cap"></span><span class="menu-text">Research</span></a></li>
 				<li><a href="#" data-tab="3"><span class="icon icon-black-tie"></span><span class="menu-text">Works</span></a></li>
 			</ul>
+			<!-- プロフィールページ -->
 			<div class="fh5co-tab-content active" data-content="1">
 				<div class="fh5co-content-inner">
 					<div class="row row-bottom-padded-sm">
@@ -32,34 +34,31 @@
 							<figure class="text-center">
 								<img src="images/profile_img.jpg">
 							</figure>
-							<h1>Atsuto Inoue 井上敦登</h1>
-							<p>所属 : 早稲田大学大学院 基幹理工学研究科 表現工学専攻</p>
-							<p>研究室 : <a href="http://www.acoust.ias.sci.waseda.ac.jp/">及川靖広 研究室</a></p>
-							<p>専攻 : 音響工学、拡張現実感(AR)</p>
+
+							<div class="profile-en">
+								<h1>Atsuto Inoue</h1>
+								<p>Atsuto Inoue received his B.E. degree from the Department of Intermedia Art and Science, Waseda University in 2016. He is currently a student of a master’s course in the same department. His research interests include acoustical visualization and augmented/mixed reality technology.</p>
+							</div>
+
 							<br>
-							<h4>経歴</h4>
-							<p>1994年2月　千葉県市川市出身</p>
-							<p>2012年3月　早稲田高等学校 卒業</p>
-							<p>2012年4月　早稲田大学 基幹理工学部 入学</p>
-							<p>2016年3月　早稲田大学 基幹理工学部 表現工学科 卒業</p>
-							<p>2016年4月　早稲田大学大学院 基幹理工学研究科 表現工学専攻 入学</p>
-							<p>2016年8月　日本音響学会 秋季研究発表会にて発表(学生優秀賞)</p>
-							<p>2016年10月 アコースティックイメージング研究会にて発表</p>
-							<p>2016年12月 5th Joint Meeting of the ASA and ASJにてポスター発表</p>
-							<p>2017年7-8月 SIGGRAPH2017にてポスター発表<p>
+
+							<div class="profile-ja">
+								<h1>井上敦登</h1>
+								<p>所属 : 早稲田大学大学院 基幹理工学研究科 表現工学専攻</p>
+								<p>専門 : 音響工学、拡張現実感(AR)</p>
+								<h4>経歴</h4>
+								<p>1994年2月　千葉県市川市出身</p>
+								<p>2012年3月　早稲田高等学校 卒業</p>
+								<p>2016年3月　早稲田大学 基幹理工学部 表現工学科 卒業</p>
+								<p>2016年4月　早稲田大学大学院 基幹理工学研究科 表現工学専攻 入学</p>
+								<p>2016年8月　日本音響学会 秋季研究発表会にて発表(学生優秀賞)</p>
+								<p>2016年10月 アコースティックイメージング研究会にて発表</p>
+								<p>2016年12月 5th Joint Meeting of the ASA and ASJにてポスター発表</p>
+								<p>2017年7-8月 SIGGRAPH2017にてポスター発表<p>
+							</div>
 							</div>
 						</div>
-						<!--
-						<div class="row">
-						<div class="col-md-12 fh5co-counter">
-						<div class="fh5co-number fh5co-left">10</div>
-						<div class="fh5co-text">
-						<h3 class="border-bottom">Years of experience in Web Design</h3>
-						<p>Far far away, behind the word mountains, far from the countries.</p>
-					</div>
-				</div>
-			</div>
-		-->
+
 		<ul class="fh5co-social">
 			<li><a href="mailto:at.inoue22@gmail.com">Contact<span>  </span><i class="icon-envelope"></i></a></li>
 		</ul>
@@ -70,9 +69,8 @@
 	<div class="fh5co-content-inner">
 		<div class="row">
 			<div class="col-md-12">
-				<h2>透過型ヘッドマウントディスプレイを用いた三次元音場情報の可視化</h2>
-				<h4>visualization 3D sound field system using see-through head mounted display</h4>
-
+				<h3>Visualization of 3D sound field using see-through head mounted display</h4>
+				<h5>透過型ヘッドマウントディスプレイを用いた三次元音場情報の可視化</h2>
 				<figure class="text-center">
 					<img src="images/ResearchImage.jpg" alt="vsf00">
 				</figure>
@@ -84,7 +82,7 @@
 					<div class="fh5co-text">
 						<h2>2017/07</h2>
 						<a href="http://dl.acm.org/citation.cfm?id=3102243">
-							<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, "Visualization of 3D sound field using see-through head mounted display,''SIGGRAPH'17 Posters, No. 34 , Los Angeles.</p>
+							<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, "Visualization of 3D sound field using see-through head mounted display," SIGGRAPH'17 Posters, No. 34 , Los Angeles.</p>
 						</a>
 					</div>
 				</div>
@@ -96,7 +94,7 @@
 					<div class="fh5co-text">
 						<h2>2016/12</h2>
 						<a href="http://asa.scitation.org/doi/abs/10.1121/2.0000381">
-							<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, "Three-dimensional sound-field visualization system using head mounted display and stereo camera,''  5th Joint Meet. Acoust. Soc. Am. Acoust. Soc. Jpn., Hawaii.</p>
+							<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, "Three-dimensional sound-field visualization system using head mounted display and stereo camera," 5th Joint Meet. Acoust. Soc. Am. Acoust. Soc. Jpn., Hawaii.</p>
 						</a>
 					</div>
 				</div>
@@ -120,8 +118,7 @@
 					<div class="fh5co-text">
 						<h2>2016/09</h2>
 						<a href="http://contents.acoust.ias.sci.waseda.ac.jp/publications/ASJ/2016/asj-inoue-2016sep.pdf">
-							<p>井上敦登, 池田雄介, 矢田部浩平, 及川靖広, ``ヘッドマウントディスプレイを用いた三次元音場情報呈示システム,'' 日本音響学会講演論文集, pp.1097--1098.</p>
-							<p>学生優秀発表賞受賞</p>
+							<p>井上敦登, 池田雄介, 矢田部浩平, 及川靖広, ``ヘッドマウントディスプレイを用いた三次元音場情報呈示システム,'' 日本音響学会講演論文集, pp.1097--1098. (学生優秀発表賞受賞)</p>
 						</a>
 					</div>
 				</div>
@@ -141,12 +138,13 @@
 					<div class="fh5co-text">
 						<h2>2017/02</h2>
 						<a href="http://animation.filmarchives.jp/">
-							<h3>日本アニメーション映画クラシックス</h3>
+							<h3>Japan Animation Film Classics </h3>
+							<h5>日本アニメーション映画クラシックス</h5>
 							<figure class="text-center">
 								<img src="images/jafc.png" alt="jafc">
 							</figure>
 						</a>
-						<p>バックエンドエンジニア</p>
+						<p>Back-end engineer</p>
 					</div>
 				</div>
 			</div>
