スマホ使用時に画像横幅を縮める機能追加

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="no-js">
+
 <head>
 	<title>A.Inoue's Portfolio</title>
 	<meta charset="utf-8">
 	<meta http-equiv="content-language" content="ja">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, user-scalable=0">
-	<meta property="og:title" content="A.Inoue's Portfolio"/>
-	<meta property="og:url" content="https://atsuhan.github.io/"/>
-	<meta property="og:description" content="井上敦登の自己紹介ページ"/>
+	<meta property="og:title" content="A.Inoue's Portfolio" />
+	<meta property="og:url" content="https://atsuhan.github.io/" />
+	<meta property="og:description" content="井上敦登の自己紹介ページ" />
 	<meta name="twitter:title" content="A.Inoue's Portfolio" />
 	<meta name="twitter:url" content="https://atsuhan.github.io/" />
 	<link rel="stylesheet" href="css/animate.css">
@@ -17,6 +18,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/modernizr-2.6.2.min.js"></script>
 </head>
+
 <body style="background-image: url(images/backimage.jpg);">
 	<div id="fh5co-main">
 		<div class="fh5co-tab-wrap">
@@ -34,42 +36,43 @@
 							<figure class="text-center">
 								<img src="images/profile_img.jpg">
 							</figure>
-
+							<!-- 英語 -->
 							<div class="profile-en">
 								<h1>Atsuto Inoue</h1>
-								<p>Atsuto Inoue received his B.E. degree from the Department of Intermedia Art and Science, Waseda University in 2016. He is currently a student of a master’s course in the same department. His research interests include acoustical visualization and augmented/mixed reality technology.</p>
+								<p>Atsuto Inoue received his B.E. degree from the Department of Intermedia Art and Science, Waseda University in 2016. He is currently a student of a master’s course in the same department. His research interests include acoustical visualization
+									and augmented/mixed reality technology.</p>
 							</div>
-
-							<br>
-
+							<!-- 日本語 -->
 							<div class="profile-ja">
 								<h1>井上敦登</h1>
 								<p>所属 : 早稲田大学大学院 基幹理工学研究科 表現工学専攻</p>
 								<p>専門 : 音響工学、拡張現実感(AR)</p>
-								<h4>経歴</h4>
-								<p>1994年2月　千葉県市川市出身</p>
-								<p>2012年3月　早稲田高等学校 卒業</p>
-								<p>2016年3月　早稲田大学 基幹理工学部 表現工学科 卒業</p>
-								<p>2016年4月　早稲田大学大学院 基幹理工学研究科 表現工学専攻 入学</p>
-								<p>2016年8月　日本音響学会 秋季研究発表会にて発表(学生優秀賞)</p>
-								<p>2016年10月 アコースティックイメージング研究会にて発表</p>
-								<p>2016年12月 5th Joint Meeting of the ASA and ASJにてポスター発表</p>
-								<p>2017年7-8月 SIGGRAPH2017にてポスター発表<p>
-							</div>
+								<p>経歴</p>
+								<ul class="historylisdft">
+									<li>1994年2月　千葉県市川市出身</li>
+									<li>2012年3月　早稲田高等学校 卒業</li>
+									<li>2016年3月　早稲田大学 基幹理工学部 表現工学科 卒業</li>
+									<li>2016年4月　早稲田大学大学院 基幹理工学研究科 表現工学専攻 入学</li>
+									<li>2016年8月　日本音響学会 秋季研究発表会にて発表(学生優秀賞)</li>
+									<li>2016年10月 アコースティックイメージング研究会にて発表</li>
+									<li>2016年12月 5th Joint Meeting of the ASA and ASJにてポスター発表</li>
+									<li>2017年7-8月 SIGGRAPH2017にてポスター発表</li>
+								</ul>
 							</div>
 						</div>
+					</div>
 
-		<ul class="fh5co-social">
-			<li><a href="mailto:at.inoue22@gmail.com">Contact<span>  </span><i class="icon-envelope"></i></a></li>
-		</ul>
-	</div>
-</div>
+					<ul class="fh5co-social">
+						<li><a href="mailto:at.inoue22@gmail.com">Contact<span>  </span><i class="icon-envelope"></i></a></li>
+					</ul>
+				</div>
+			</div>
 
-<div class="fh5co-tab-content" data-content="2">
-	<div class="fh5co-content-inner">
-		<div class="row">
-			<div class="col-md-12">
-				<h3>Visualization of 3D sound field using see-through head mounted display</h4>
+			<div class="fh5co-tab-content" data-content="2">
+				<div class="fh5co-content-inner">
+					<div class="row">
+						<div class="col-md-12">
+							<h3>Visualization of 3D sound field using see-through head mounted display</h4>
 				<h5>透過型ヘッドマウントディスプレイを用いた三次元音場情報の可視化</h2>
 				<figure class="text-center">
 					<img src="images/ResearchImage.jpg" alt="vsf00">
@@ -143,41 +146,40 @@
 							<figure class="text-center">
 								<img src="images/jafc.png" alt="jafc">
 							</figure>
-						</a>
-						<p>Back-end engineer</p>
+							</a>
+							<p>Back-end engineer</p>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
-</div>
-
-
-<footer id="fh5co-footer">
-	<div class="row">
-		<div class="col-md-6 col-md-offset-3 text-center">
-			<small>
-				Atsuto Inoue Portfolio.
-			</small>
-		</div>
 	</div>
-</footer>
-</div>
 
-<!-- jQuery -->
-<script src="js/jquery.min.js"></script>
-<!-- jQuery Easing -->
-<script src="js/jquery.easing.1.3.js"></script>
-<!-- Bootstrap -->
-<script src="js/bootstrap.min.js"></script>
-<!-- Waypoints -->
-<script src="js/jquery.waypoints.min.js"></script>
-<!-- Easy PieChart -->
-<script src="js/jquery.easypiechart.min.js"></script>
-<!-- MAIN JS -->
-<script src="js/main.js"></script>
+
+	<footer id="fh5co-footer">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3 text-center">
+				<small>Atsuto Inoue Portfolio.</small>
+			</div>
+		</div>
+	</footer>
+	</div>
+
+	<!-- jQuery -->
+	<script src="js/jquery.min.js"></script>
+	<!-- jQuery Easing -->
+	<script src="js/jquery.easing.1.3.js"></script>
+	<!-- Bootstrap -->
+	<script src="js/bootstrap.min.js"></script>
+	<!-- Waypoints -->
+	<script src="js/jquery.waypoints.min.js"></script>
+	<!-- Easy PieChart -->
+	<script src="js/jquery.easypiechart.min.js"></script>
+	<!-- MAIN JS -->
+	<script src="js/main.js"></script>
 
 </body>
+
 </html>
